changed some stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<%= link_to "HOME", root_path %>
-<%= link_to "ABOUTUS", about_path %>
-
-<%= yield %>
+<%= render 'layouts/header' %>
+<div class="container">
+	<%= yield %>
+</div>
 </body>
 </html>
